# Computational-Math-HomeWork

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  build.sh  lab1.ipynb
1_sem/: CMakeLists.txt
1_sem/lab2/: Readme.md  main.cpp  output.txt
1_sem/lab3/: main.cpp
1_sem/lab4/: main.cpp  varB.csv  varC.csv  varE.csv
2_sem/: CMakeLists.txt
2_sem/lab1_ODU/: CMakeLists.txt  main.cpp  plot.py  report.tex
2_sem/lab2_implicit/: CMakeLists.txt  main.cpp  plot.py  report.tex
2_sem/lab3_shootout/: CMakeLists.txt  main.cpp  plot.py
lab2/: CMakeLists.txt  main.cpp
lab3/: CMakeLists.txt  lab3_output.txt  main.cpp
lab4/: CMakeLists.txt  Readme.md  varA.csv  varD.csv
